--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -12,6 +12,7 @@
     <string name="bike">Bike</string>
     <string name="home">Aktivite Listesi</string>
     <string name="timeline">Zaman Akışı</string>
+    <string name="scan">Tara</string>
 
 
 </resources>
